--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/05_building_dataset.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/05_building_dataset.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP8nuKwobIVx20k6t4oJJRe",
+      "authorship_tag": "ABX9TyMrATnH+7A/gruRoTPpg82d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,12 +76,14 @@
         "# # # HuggingFace\n",
         "!pip install transformers==4.32.0\n",
         "!pip install datasets==2.14.4\n",
-        "# ###########################################################"
+        "# ###########################################################\n",
+        "!pip -q install spacy\n",
+        "!python -m spacy download en_core_web_sm"
       ],
       "metadata": {
         "id": "bPp9LPHbWch9"
       },
-      "execution_count": 30,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -106,9 +108,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1c5517a4-730c-48e7-8bdb-be69c9941132"
+        "outputId": "99a95d3a-4c0a-4737-f17d-92b1bc89d115"
       },
-      "execution_count": 31,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,13 +144,14 @@
         "# These are the classes we built in Chapter 10\n",
         "from seq2seq import *\n",
         "\n",
+        "import spacy\n",
         "import nltk\n",
         "from nltk.tokenize import sent_tokenize"
       ],
       "metadata": {
         "id": "i9pPl_87mbqd"
       },
-      "execution_count": 32,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -158,19 +161,19 @@
       ],
       "metadata": {
         "id": "lrnHpAEYgrSS",
-        "outputId": "6ee3503a-2bdc-492a-a860-1aa7de98b088",
+        "outputId": "654f6bc8-a4dc-4421-a19e-dab177b29a79",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n"
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
           ]
         },
         {
@@ -181,7 +184,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 4
         }
       ]
     },
@@ -197,7 +200,7 @@
       "metadata": {
         "id": "dEQBv2ddXGS_"
       },
-      "execution_count": 34,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -218,7 +221,7 @@
       "metadata": {
         "id": "w1HKtpREXdlF"
       },
-      "execution_count": 35,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -238,7 +241,7 @@
       "metadata": {
         "id": "4hr1Jm9kK9DO"
       },
-      "execution_count": 36,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -252,7 +255,7 @@
       "metadata": {
         "id": "eTXbiieBX4Sz"
       },
-      "execution_count": 37,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -264,7 +267,7 @@
       "metadata": {
         "id": "45chINE_YYtz"
       },
-      "execution_count": 38,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -275,7 +278,7 @@
       "metadata": {
         "id": "uM-tdJNRZcnt"
       },
-      "execution_count": 39,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -303,7 +306,7 @@
       "metadata": {
         "id": "8z29BFQwZx4U"
       },
-      "execution_count": 40,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -318,9 +321,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tNZmtkHNahrp",
-        "outputId": "e2673a04-8dc4-49ce-ea79-da71e2e5e028"
+        "outputId": "0a5434d5-2727-4faf-b5b8-4711491d2b6f"
       },
-      "execution_count": 41,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +388,7 @@
       "metadata": {
         "id": "ayc3piYsbutL"
       },
-      "execution_count": 42,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -421,12 +424,12 @@
       ],
       "metadata": {
         "id": "oFsqtdFkenM-",
-        "outputId": "c43c9683-6fdb-4cb5-e57a-9f4ed86292ab",
+        "outputId": "b817c5d0-4079-4d04-865e-71ece5d7f6ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -436,7 +439,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 14
         }
       ]
     },
@@ -462,9 +465,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cg1Kg0Ung7aq",
-        "outputId": "02685f55-5024-4485-8165-1b038344aa52"
+        "outputId": "40928e46-7054-4f23-ed66-467b4d7c8bd2"
       },
-      "execution_count": 44,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -474,7 +477,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 15
         }
       ]
     },
@@ -494,13 +497,13 @@
       ],
       "metadata": {
         "id": "mWQQFsanh4GS",
-        "outputId": "7c54c7d7-415f-4284-e47e-140656ad2e62",
+        "outputId": "f2d9a029-a5eb-49b3-8fc0-41a47c1f2a9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
         }
       },
-      "execution_count": 45,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +516,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 16
         }
       ]
     },
@@ -533,13 +536,13 @@
       ],
       "metadata": {
         "id": "ojBtgVa1iGSs",
-        "outputId": "9d23260c-ff7f-44c0-a84f-33ff10c23738",
+        "outputId": "6985ca5e-d625-48aa-8da8-b0897fb4f365",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
-      "execution_count": 46,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -552,7 +555,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 17
         }
       ]
     },
@@ -643,7 +646,7 @@
       "metadata": {
         "id": "2BxVWK0Rk21Y"
       },
-      "execution_count": 49,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -654,12 +657,12 @@
       ],
       "metadata": {
         "id": "95M-z4GlFTgy",
-        "outputId": "fb78e5bc-b138-4d58-9834-aca3f04423f4",
+        "outputId": "2d0166a1-6ca5-431a-fa56-2d9870a96200",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -669,7 +672,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 19
         }
       ]
     },
@@ -681,6 +684,58 @@
       "metadata": {
         "id": "CAFblQB6MEge"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nlp = spacy.blank(\"en\")\n",
+        "nlp.add_pipe(\"sentencizer\")\n",
+        "\n",
+        "sentences = []\n",
+        "for doc in nlp.pipe(corpus_alice):\n",
+        "  sentences.extend(sent.text for sent in doc.sents)\n",
+        "\n",
+        "len(sentences), sentences[2]"
+      ],
+      "metadata": {
+        "id": "cUlNTST_SUmH",
+        "outputId": "9b06fec6-a3a6-4d07-a729-25a9dd829ad0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1615,\n",
+              " 'There was nothing so VERY remarkable in that; nor did Alice\\nthink it so VERY much out of the way to hear the Rabbit say to\\nitself, `Oh dear!')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##HuggingFace’s Dataset"
+      ],
+      "metadata": {
+        "id": "gMQtKHL5VMvU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wDWkbp0-VNmV"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
