--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/05_building_dataset.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/05_building_dataset.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMrATnH+7A/gruRoTPpg82d",
+      "authorship_tag": "ABX9TyMybgH99piLpIAvIQObc0yP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,7 +108,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "99a95d3a-4c0a-4737-f17d-92b1bc89d115"
+        "outputId": "6cc5197d-3ff6-4d32-a9ab-12ed70c66734"
       },
       "execution_count": 2,
       "outputs": [
@@ -151,7 +151,7 @@
       "metadata": {
         "id": "i9pPl_87mbqd"
       },
-      "execution_count": 21,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
       ],
       "metadata": {
         "id": "lrnHpAEYgrSS",
-        "outputId": "654f6bc8-a4dc-4421-a19e-dab177b29a79",
+        "outputId": "fed72768-66d9-4f5d-e287-ea403680ef5b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -321,7 +321,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tNZmtkHNahrp",
-        "outputId": "0a5434d5-2727-4faf-b5b8-4711491d2b6f"
+        "outputId": "539db128-4aa3-446a-d86f-1bd5f75fa872"
       },
       "execution_count": 12,
       "outputs": [
@@ -424,7 +424,7 @@
       ],
       "metadata": {
         "id": "oFsqtdFkenM-",
-        "outputId": "b817c5d0-4079-4d04-865e-71ece5d7f6ed",
+        "outputId": "45a3fb00-88bc-4bdc-9cbf-af6b8c76b370",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -465,7 +465,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cg1Kg0Ung7aq",
-        "outputId": "40928e46-7054-4f23-ed66-467b4d7c8bd2"
+        "outputId": "944edbac-9618-4d32-ced2-b35859e954c4"
       },
       "execution_count": 15,
       "outputs": [
@@ -497,7 +497,7 @@
       ],
       "metadata": {
         "id": "mWQQFsanh4GS",
-        "outputId": "f2d9a029-a5eb-49b3-8fc0-41a47c1f2a9c",
+        "outputId": "dcef180b-2247-4e7e-9177-7bed6cddc839",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -536,7 +536,7 @@
       ],
       "metadata": {
         "id": "ojBtgVa1iGSs",
-        "outputId": "6985ca5e-d625-48aa-8da8-b0897fb4f365",
+        "outputId": "3f24e0a4-e6ff-4551-d9dd-a0b142f8b5e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -657,7 +657,7 @@
       ],
       "metadata": {
         "id": "95M-z4GlFTgy",
-        "outputId": "2d0166a1-6ca5-431a-fa56-2d9870a96200",
+        "outputId": "9e47a686-f1d1-4472-8561-b2aa49aedd42",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -699,12 +699,12 @@
       ],
       "metadata": {
         "id": "cUlNTST_SUmH",
-        "outputId": "9b06fec6-a3a6-4d07-a729-25a9dd829ad0",
+        "outputId": "b0823659-f1a7-4618-8223-c87eb8bae22a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -715,7 +715,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 20
         }
       ]
     },
@@ -730,12 +730,126 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# let's load from local files using HuggingFace\n",
+        "dataset = load_dataset(path=\"csv\", data_files=new_fnames, quotechar=\"\\\\\", split=Split.TRAIN)"
+      ],
       "metadata": {
         "id": "wDWkbp0-VNmV"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's see attributes, like features, num_columns, and shape\n",
+        "dataset.features, dataset.num_columns, dataset.shape"
+      ],
+      "metadata": {
+        "id": "cUGmh8d9upmR",
+        "outputId": "f8395493-c4db-4455-f111-2651d01d01c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "({'sentence': Value(dtype='string', id=None),\n",
+              "  'source': Value(dtype='string', id=None)},\n",
+              " 2,\n",
+              " (3852, 2))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset[2]"
+      ],
+      "metadata": {
+        "id": "qbcE5hb2u7Rp",
+        "outputId": "be5bf4d2-b160-41d8-840e-0427c9d1c27e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'sentence': 'There was nothing so VERY remarkable in that; nor did Alice think it so VERY much out of the way to hear the Rabbit say to itself, `Oh dear!',\n",
+              " 'source': 'alice28-1476.txt'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset[\"sentence\"][:3]"
+      ],
+      "metadata": {
+        "id": "HwwhVPVhvL8-",
+        "outputId": "74bdfcf5-51e0-497d-951a-f286835b8849",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[\"                ALICE'S ADVENTURES IN WONDERLAND                            Lewis Carroll                 THE MILLENNIUM FULCRUM EDITION 2.8                                 CHAPTER I                        Down the Rabbit-Hole     Alice was beginning to get very tired of sitting by her sister on the bank, and of having nothing to do:  once or twice she had peeped into the book her sister was reading, but it had no pictures or conversations in it, `and what is the use of a book,' thought Alice `without pictures or conversation?'\",\n",
+              " 'So she was considering in her own mind (as well as she could, for the hot day made her feel very sleepy and stupid), whether the pleasure of making a daisy-chain would be worth the trouble of getting up and picking the daisies, when suddenly a White Rabbit with pink eyes ran close by her.',\n",
+              " 'There was nothing so VERY remarkable in that; nor did Alice think it so VERY much out of the way to hear the Rabbit say to itself, `Oh dear!']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset[\"source\"][:3]"
+      ],
+      "metadata": {
+        "id": "-jLahzGpvB4m",
+        "outputId": "3ac6b46b-930c-4cee-f1b6-3327bd3de678",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['alice28-1476.txt', 'alice28-1476.txt', 'alice28-1476.txt']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     }
   ]
 }
