--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/05_building_dataset.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/05_building_dataset.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMybgH99piLpIAvIQObc0yP",
+      "authorship_tag": "ABX9TyOoWqju7EaK58oly7FpsUgI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,7 +108,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6cc5197d-3ff6-4d32-a9ab-12ed70c66734"
+        "outputId": "215e9f84-7885-4a50-cd94-6782858f15e2"
       },
       "execution_count": 2,
       "outputs": [
@@ -161,7 +161,7 @@
       ],
       "metadata": {
         "id": "lrnHpAEYgrSS",
-        "outputId": "fed72768-66d9-4f5d-e287-ea403680ef5b",
+        "outputId": "b4f7b6c4-3192-4d14-f8f9-36cdb8a37761",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -321,7 +321,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tNZmtkHNahrp",
-        "outputId": "539db128-4aa3-446a-d86f-1bd5f75fa872"
+        "outputId": "a99c0d4a-9510-481f-8b20-5c1c8c6b99fa"
       },
       "execution_count": 12,
       "outputs": [
@@ -424,7 +424,7 @@
       ],
       "metadata": {
         "id": "oFsqtdFkenM-",
-        "outputId": "45a3fb00-88bc-4bdc-9cbf-af6b8c76b370",
+        "outputId": "eed7322b-c131-4b4d-fcf7-4caaea01aa29",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -465,7 +465,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cg1Kg0Ung7aq",
-        "outputId": "944edbac-9618-4d32-ced2-b35859e954c4"
+        "outputId": "a598a142-bda2-4a2c-8fe4-2665e04453ee"
       },
       "execution_count": 15,
       "outputs": [
@@ -497,7 +497,7 @@
       ],
       "metadata": {
         "id": "mWQQFsanh4GS",
-        "outputId": "dcef180b-2247-4e7e-9177-7bed6cddc839",
+        "outputId": "f036a00b-538c-4e1b-92f6-fcdeeaaeab4e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -536,7 +536,7 @@
       ],
       "metadata": {
         "id": "ojBtgVa1iGSs",
-        "outputId": "3f24e0a4-e6ff-4551-d9dd-a0b142f8b5e1",
+        "outputId": "24e20074-bf46-4f2f-97d7-86e842975686",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -657,7 +657,7 @@
       ],
       "metadata": {
         "id": "95M-z4GlFTgy",
-        "outputId": "9e47a686-f1d1-4472-8561-b2aa49aedd42",
+        "outputId": "1d83899e-c022-469c-92c3-ddb6a7e5f381",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -699,7 +699,7 @@
       ],
       "metadata": {
         "id": "cUlNTST_SUmH",
-        "outputId": "b0823659-f1a7-4618-8223-c87eb8bae22a",
+        "outputId": "bdffeab4-533b-4afd-87fa-4f004b7b9112",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -748,12 +748,12 @@
       ],
       "metadata": {
         "id": "cUGmh8d9upmR",
-        "outputId": "f8395493-c4db-4455-f111-2651d01d01c8",
+        "outputId": "a5ccc78a-3f30-4a19-a7e5-f01e63bffe8c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -766,7 +766,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 22
         }
       ]
     },
@@ -777,7 +777,7 @@
       ],
       "metadata": {
         "id": "qbcE5hb2u7Rp",
-        "outputId": "be5bf4d2-b160-41d8-840e-0427c9d1c27e",
+        "outputId": "2cb2d895-fc09-46ba-fb6f-63abf12486ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -804,12 +804,12 @@
       ],
       "metadata": {
         "id": "HwwhVPVhvL8-",
-        "outputId": "74bdfcf5-51e0-497d-951a-f286835b8849",
+        "outputId": "91b84757-0175-42cd-eca5-f8f474671461",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -821,7 +821,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 24
         }
       ]
     },
@@ -832,12 +832,12 @@
       ],
       "metadata": {
         "id": "-jLahzGpvB4m",
-        "outputId": "3ac6b46b-930c-4cee-f1b6-3327bd3de678",
+        "outputId": "8eb76812-b9c8-48e8-def7-84275ec6bc83",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -847,9 +847,185 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 25
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# check the unique sources\n",
+        "dataset.unique(\"source\")"
+      ],
+      "metadata": {
+        "id": "JtCGLGaVGxI1",
+        "outputId": "3a3dcc7e-238b-4be9-d03d-f0fb9745d0be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['alice28-1476.txt', 'wizoz10-1740.txt']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's create new columns\n",
+        "def is_alice_label(row):\n",
+        "  is_alice = int(row[\"source\"] == \"alice28-1476.txt\")\n",
+        "  return {\"label\": is_alice}"
+      ],
+      "metadata": {
+        "id": "qqTGqoNzHBUL"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset = dataset.map(is_alice_label)"
+      ],
+      "metadata": {
+        "id": "yO6tDsIrHUHZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset[2]"
+      ],
+      "metadata": {
+        "id": "kW04h9hFHw8f",
+        "outputId": "a7f49510-006a-4f05-fbe7-edd09d818569",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'sentence': 'There was nothing so VERY remarkable in that; nor did Alice think it so VERY much out of the way to hear the Rabbit say to itself, `Oh dear!',\n",
+              " 'source': 'alice28-1476.txt',\n",
+              " 'label': 1}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Now, we can finally shuffle the dataset and split it into training and test sets\n",
+        "shuffled_dataset = dataset.shuffle(seed=42)\n",
+        "split_dataset = shuffled_dataset.train_test_split(test_size=0.2)\n",
+        "split_dataset"
+      ],
+      "metadata": {
+        "id": "kTby8KlRQtDQ",
+        "outputId": "3d730da5-f92e-4d8b-f18d-b4aa5e496e59",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DatasetDict({\n",
+              "    train: Dataset({\n",
+              "        features: ['sentence', 'source', 'label'],\n",
+              "        num_rows: 3081\n",
+              "    })\n",
+              "    test: Dataset({\n",
+              "        features: ['sentence', 'source', 'label'],\n",
+              "        num_rows: 771\n",
+              "    })\n",
+              "})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dataset = split_dataset[\"train\"]\n",
+        "test_dataset = split_dataset[\"test\"]"
+      ],
+      "metadata": {
+        "id": "pNKEmyDIRD32"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dataset[0]"
+      ],
+      "metadata": {
+        "id": "_fb8D7pYRQkW",
+        "outputId": "ff5dddc6-2dab-425f-cf1f-f4306e0b581d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'sentence': \"`I can't help it,' said Alice very meekly:  `I'm growing.'\",\n",
+              " 'source': 'alice28-1476.txt',\n",
+              " 'label': 1}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Word Tokenization"
+      ],
+      "metadata": {
+        "id": "IHdmrMW6ROgI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YVlCDdeHRPOD"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
