--- a/deep-learning-fundamentals/unit08-NLP/02-large-language-model/2_finetune_last_layers.ipynb
+++ b/deep-learning-fundamentals/unit08-NLP/02-large-language-model/2_finetune_last_layers.ipynb
@@ -29,7 +29,7 @@
       "source": [
         "Here, we are finetuning the output layers of a pretrained transformer:\n",
         "\n",
-        "<img src=\"https://github.com/rasbt/blog-finetuning-llama-adapters/blob/main/three-conventional-methods/figures/2_finetune-last.png?raw=1\" width=500>\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-fundamentals/unit08-NLP/02-large-language-model/images/finetuning-i.png?raw=1)\n",
         "\n",
         "\n",
         "**Reference**\n",
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "033b75c5",
       "metadata": {
         "id": "033b75c5"
@@ -123,7 +123,7 @@
         "outputId": "226e0d67-5971-4cc4-a00a-bcf93148863c"
       },
       "id": "uJwHC0vjyO4j",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "fb31ac90-9e3a-41d0-baf1-8e613043924b",
       "metadata": {
         "id": "fb31ac90-9e3a-41d0-baf1-8e613043924b",
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "221f30a1-b433-4304-a18d-8d03abd42b58",
       "metadata": {
         "id": "221f30a1-b433-4304-a18d-8d03abd42b58"
@@ -222,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "a1aa66c7",
       "metadata": {
         "id": "a1aa66c7",
@@ -337,7 +337,7 @@
         "outputId": "80975a40-16f5-48aa-d5a9-c4b3908aff25"
       },
       "id": "tqZwAxFHy0pZ",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,7 +351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "8432c15c",
       "metadata": {
         "id": "8432c15c"
@@ -364,7 +364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "0bb392cf",
       "metadata": {
         "id": "0bb392cf",
@@ -459,7 +459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "6d4103c3",
       "metadata": {
         "id": "6d4103c3"
@@ -471,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "89ef894c-978f-47f2-9d61-cb6a9f38e745",
       "metadata": {
         "id": "89ef894c-978f-47f2-9d61-cb6a9f38e745"
@@ -483,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "0ea67091-aeb7-46c1-871f-638ce58d8a0e",
       "metadata": {
         "id": "0ea67091-aeb7-46c1-871f-638ce58d8a0e"
@@ -505,7 +505,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "0807b068-7d8f-4055-a26a-177e07dea4c7",
       "metadata": {
         "id": "0807b068-7d8f-4055-a26a-177e07dea4c7"
@@ -590,7 +590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "c14e61f3-3279-4725-ad7a-3c77f85aa39d",
       "metadata": {
         "id": "c14e61f3-3279-4725-ad7a-3c77f85aa39d"
@@ -613,7 +613,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "1bca22b5-8a48-4006-929f-66734a745a50",
       "metadata": {
         "id": "1bca22b5-8a48-4006-929f-66734a745a50",
@@ -673,7 +673,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "4f852fc6-3b00-4831-a973-e03b539a6cd0",
       "metadata": {
         "id": "4f852fc6-3b00-4831-a973-e03b539a6cd0"
@@ -709,7 +709,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "9f2c474d",
       "metadata": {
         "id": "9f2c474d"
@@ -763,7 +763,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "e6dab813-e1fc-47cd-87a1-5eb8070699c6",
       "metadata": {
         "id": "e6dab813-e1fc-47cd-87a1-5eb8070699c6"
@@ -816,7 +816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "d795778a-70d2-4b04-96fb-598eccbcd1be",
       "metadata": {
         "id": "d795778a-70d2-4b04-96fb-598eccbcd1be",
@@ -906,7 +906,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "10ca0af1-106e-4ef7-9793-478d580af827",
       "metadata": {
         "id": "10ca0af1-106e-4ef7-9793-478d580af827",
@@ -994,7 +994,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "eeb92de4-d483-4627-b9f3-f0bba0cddd9c",
       "metadata": {
         "id": "eeb92de4-d483-4627-b9f3-f0bba0cddd9c",
