--- a/pytorch-deep-learning/00_pytorch_fundamentals.ipynb
+++ b/pytorch-deep-learning/00_pytorch_fundamentals.ipynb
@@ -2667,16 +2667,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "oSXzdxCQTGfD",
-        "outputId": "05a72c08-5f8c-433a-cd31-46065686f825"
+        "outputId": "b3545342-f6db-4656-f197-fbc9092ad6e7"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(tensor([[[1, 2, 3],\n",
@@ -2685,9 +2686,8 @@
               " torch.Size([1, 3, 3]))"
             ]
           },
-          "execution_count": 58,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 1
         }
       ],
       "source": [
@@ -2708,18 +2708,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zv_Z3IAzTGfD",
-        "outputId": "cf6c0936-7600-4af4-9b6f-f6b8ac9b4c05"
+        "outputId": "70839c39-64c3-42a7-b5cf-cc660d2b3687"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "First square bracket:\n",
             "tensor([[1, 2, 3],\n",
@@ -2738,6 +2738,58 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "x[0][1]"
+      ],
+      "metadata": {
+        "id": "Wek3NRTzfW7Q",
+        "outputId": "c10a134a-22d6-4f06-e2e4-ec64eab60db5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([4, 5, 6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[0][1][0]"
+      ],
+      "metadata": {
+        "id": "oXvqqAK_fbGn",
+        "outputId": "d6301083-2f7a-427e-a7fb-4b891e83f73c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(4)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "XaLjaIFxHe89"
@@ -2748,24 +2800,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gCT09pqeTGfD",
-        "outputId": "a91f9b73-f8f0-476a-9c69-fcd03b042f6b"
+        "outputId": "ba79f698-57ce-4088-db5b-ae8198ab9f06"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor([[1, 2, 3]])"
             ]
           },
-          "execution_count": 60,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 6
         }
       ],
       "source": [
@@ -2775,24 +2827,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "x[:, 1]"
+      ],
+      "metadata": {
+        "id": "tySR-OzgfxsY",
+        "outputId": "1dcb63cc-59cb-43d7-eb56-506f0d64225c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[4, 5, 6]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dwDx_gMsTGfD",
-        "outputId": "8165cfd9-a88d-4212-8c45-1eb84ef5be83"
+        "outputId": "abcde981-c9c2-4334-d181-8e379fb557b0"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor([[2, 5, 8]])"
             ]
           },
-          "execution_count": 61,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 10
         }
       ],
       "source": [
@@ -2802,24 +2880,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "x[:, :, 0]"
+      ],
+      "metadata": {
+        "id": "J1iAZheLf_Fx",
+        "outputId": "a86dce6f-d725-4776-daac-26e890c2e786",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 4, 7]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xiw3_1E3TGfD",
-        "outputId": "12fa4749-cf52-4e88-c2c0-44d26aeb633c"
+        "outputId": "4b7ae70a-a45e-46aa-d762-b00d5e0b54e9"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor([5])"
             ]
           },
-          "execution_count": 62,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 12
         }
       ],
       "source": [
@@ -2829,29 +2933,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XFVEgrKhTGfD",
-        "outputId": "69eadeb9-11b3-4b48-cb95-0b3305c1274c"
+        "outputId": "576ee42f-8d20-465f-8819-5ef60397ad80"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor([1, 2, 3])"
             ]
           },
-          "execution_count": 63,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 13
         }
       ],
       "source": [
         "# Get index 0 of 0th and 1st dimension and all values of 2nd dimension\n",
         "x[0, 0, :] # same as x[0][0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[0::2]"
+      ],
+      "metadata": {
+        "id": "09ex4pqBgX37",
+        "outputId": "0055962e-0e6b-4731-8c01-5c475bf5a365",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[1, 2, 3],\n",
+              "         [4, 5, 6],\n",
+              "         [7, 8, 9]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
       ]
     },
     {
@@ -2882,25 +3014,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yDrDCnvY7rKS",
-        "outputId": "86155a63-01f9-4372-e889-61a65ebf0fb1"
+        "outputId": "92dc8015-e6cc-4541-9127-7b84d116cf55"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(array([1., 2., 3., 4., 5., 6., 7.]),\n",
               " tensor([1., 2., 3., 4., 5., 6., 7.], dtype=torch.float64))"
             ]
           },
-          "execution_count": 64,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 19
         }
       ],
       "source": [
@@ -2929,25 +3061,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ovwl7VCREv8L",
-        "outputId": "efd21eb9-0010-436a-dc29-f851e3d7d77a"
+        "outputId": "f4c9414b-351f-48d6-ecff-5b7345a9ec6e"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(array([2., 3., 4., 5., 6., 7., 8.]),\n",
               " tensor([1., 2., 3., 4., 5., 6., 7.], dtype=torch.float64))"
             ]
           },
-          "execution_count": 65,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 20
         }
       ],
       "source": [
@@ -2967,25 +3099,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xw_7ZyVaTKxQ",
-        "outputId": "54d6f347-d3f6-44df-9155-83d980c31780"
+        "outputId": "a7ddd4fd-e951-40b6-b8b3-cead2466f99f"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(tensor([1., 1., 1., 1., 1., 1., 1.]),\n",
               " array([1., 1., 1., 1., 1., 1., 1.], dtype=float32))"
             ]
           },
-          "execution_count": 66,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 21
         }
       ],
       "source": [
@@ -3006,25 +3138,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mMp6ZSkET4_Y",
-        "outputId": "100678a4-c220-4a44-e4a5-0542359cb9de"
+        "outputId": "663b0f10-2298-4ddc-c4d6-d61a8874e480"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(tensor([2., 2., 2., 2., 2., 2., 2.]),\n",
               " array([1., 1., 1., 1., 1., 1., 1.], dtype=float32))"
             ]
           },
-          "execution_count": 67,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 22
         }
       ],
       "source": [
